<resources>
    <string name="app_name">CounterSpam</string>
    <string name="show_all_messages">Show All Messages</string>
    <string name="show_non_spam_messages">Show Non Spam Messages</string>
    <string name="show_spam_messages">Show Spam Messages</string>
    <string name="show_otp_messages">Show OTP Messages</string>
    <string name="missed_call_messages">Missed Call Alerts</string>
    <string name="search_sender_message_content">Search sender, message content</string>

    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="create_new_pin">Create New Pin</string>

</resources>
